--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
   </head>
+  <style>
+    body { margin: 0; font-family: Arial, sans-serif; }
+    #app { min-height: 100vh; display: flex }
+    #app > * { flex: 1; }
+  </style>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
